# statlas

./: .gitattributes  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/: branch.md  branch.template.md  settings.json
.claude/agents/: data-source-scout.md
.claude/hooks/: guard-bash.sh  guard-edits.sh
.claude/skills/run-notebook/: SKILL.md
learning/: CLAUDE.md  README.md  curriculum.md  progress.md  roadmap.md
learning/days/: CLAUDE.md
learning/days/day1/: CLAUDE.md  summary.md
learning/days/day2/: CLAUDE.md  summary.md
learning/days/day3/: CLAUDE.md  summary.md
learning/days/day4/: CLAUDE.md  summary.md
learning/days/day5/: CLAUDE.md  TODAY.md  summary.md
learning/days/day5/eda/: CLAUDE.md  EDA_report.md
learning/days/day5/exercises/: CLAUDE.md  attention_from_scratch.ipynb  embedding_playground.ipynb
learning/days/day6/: summary.md
learning/modules/: CLAUDE.md
learning/modules/01-transformer-internals/: CLAUDE.md  exercises.ipynb  workbook.md
learning/modules/02-nlu-entity-resolution/: CLAUDE.md  exercises.ipynb  workbook.md
learning/templates/: CLAUDE.md  day-template.md
notebooks/: EDA_v2_FINDINGS.md  initial_eda.ipynb  initial_eda_v2.ipynb
scripts/: new-branch.sh
src/: CLAUDE.md
src/statlas/: CLAUDE.md  __init__.py  cli.py  engine.py
src/statlas/data/: CLAUDE.md  ingest.py
src/statlas/entities/: CLAUDE.md  resolver.py
src/statlas/nlu/: CLAUDE.md  parser.py
src/statlas/query/: CLAUDE.md  executor.py  planner.py
tests/: CLAUDE.md  eval_set.json  run_eval.py
(+5 files in other folders)
