[project]
name = "statlas"
version = "0.0.1"
description = "An all-in-one hub for sports analytics — natural-language sports stats engine"
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
