[project]
name = "statlas"
version = "0.0.1"
description = "An AI-powered natural-language sports-stats answer engine (a better StatMuse)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "duckdb>=1.0.0",
    "rapidfuzz>=3.0.0",
    "pandas>=2.0.0",
    "nba_api>=1.4.0",
    "geopandas>=1.1.3",
    "gensim>=4.4.0",
    "polars>=1.41.2",
    "pyarrow>=24.0.0",
]

# Optional LLM layer — install with: uv sync --extra llm   (or: uv add anthropic)
[project.optional-dependencies]
llm = ["anthropic>=0.39.0"]

# Dev / learning tools — installed by default with `uv sync`; skip with --no-dev
[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "matplotlib>=3.8",
    "ipykernel>=6.29",
    "jupyterlab>=4.0",
]

[project.scripts]
statlas = "statlas.cli:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
